# fastapi-mangosteen-backend

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  init.sh  main.py  pyproject.toml  requirements.txt  settings.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
api/: __init__.py
api/v1/: __init__.py
api/v1/endpoints/: __init__.py  item.py  login.py  mail.py  tag.py  user.py
core/: config.py  deps.py  redis.py  security.py
migrations/models/: 0_20240413202743_init.py  0_20240422172405_init.py  0_20250819182830_init.py  0_20251015203739_init.py  1_20240415141550_add_column.py
models/: __init__.py  item.py  tag.py  user.py
scheams/: __init__.py  item.py
schemas/: tag.py  user.py
