[tool.aerich]
tortoise_orm = "settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "fastapi-mangosteen-backend"
version = "0.1.0"
description = ""
authors = ["lichen404 <f360family@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tortoise-orm = {extras = ["asyncpg"], version = "^0.25.1"}
uvicorn = "^0.29.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
fastapi-mail = "^1.4.1"
aerich = "^0.7.2"
fastapi = "<0.115"
slowapi = "^0.1.9"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
